fix spacing in foldaway links

--- a/assets/styles/partials/_site-header.scss
+++ b/assets/styles/partials/_site-header.scss
@@ -188,6 +188,7 @@
             .section-right {
                 width:auto;
                 margin-right: 65px;
+                padding-top: 13px;
             }
 
 
