--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -8308,7 +8308,8 @@ ul.menu > li > ul.sub-menu.breaking-news-menu > li > ul.sub-sub-menu > li {
       padding-top: 10px; }
     .site-header .site-branding-top.foldaway .section-right {
       width: auto;
-      margin-right: 65px; }
+      margin-right: 65px;
+      padding-top: 13px; }
     .site-header .site-branding-top.foldaway .social-links {
       display: inline-block; }
     .site-header .site-branding-top.foldaway .secondary-menu {
